fixed sidebar content spacing

--- a/style.css
+++ b/style.css
@@ -158,5 +158,9 @@ header{
     margin-left: 5%;
   }
 
+  #sidebar_content {
+    justify-content: space-around;
+  }
+
 
 }
